[base] Fix minor version expression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ set(PACKAGE_TARNAME    "${PACKAGE_NAME}-${PACKAGE_VERSION}")
 set(PACKAGE_BUGREPORT  "https://github.com/The-White-Box/whitebox/issues")
 
 project(${PACKAGE_NAME}
-  VERSION ${PACKAGE_VER_MAJOR}.${PACKAGE_VER_MAJOR}.${PACKAGE_VER_PATCH}.${PACKAGE_VER_TWEAK}
+  VERSION ${PACKAGE_VER_MAJOR}.${PACKAGE_VER_MINOR}.${PACKAGE_VER_PATCH}.${PACKAGE_VER_TWEAK}
   LANGUAGES CXX)
 
 message(STATUS "[common]: CMake version: ${CMAKE_VERSION}.")
