[apps] Add tests for counting stream buffer

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -56,13 +56,14 @@ wb_cxx_shared_library(
 
 if (WB_BUILD_TESTS)
   set(WB_BASE_TESTS_LINK_DEPS
+    absl::cleanup
     fmt
     g3log
     mimalloc
     wb::whitebox-base)
 
   if (WB_OS_WIN)
-    # _com_ptr_t support.
+    # _com_ptr_t support / winmm.
     list(APPEND WB_BASE_TESTS_LINK_DEPS "comsuppw;Winmm")
   endif()
 
