--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [ Release, Debug ]
+        build: [ debug, release ]
         os: [ macos-latest, ubuntu-latest, windows-latest ]
 
     runs-on: ${{ matrix.os }}
@@ -94,36 +94,32 @@ jobs:
           sudo update-alternatives \
           --install /usr/bin/c++ c++ /usr/bin/g++     100
 
-      - name: Configure (MacOS)
+      - name: Build (MacOS)
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev \
-          -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-          -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON \
-          -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON \
-          -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON \
-          -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_CLANG_LINKER_TYPE="ld"
+          cmake --build --preset x86_64-apple-darwin-${{ matrix.build }}
 
-      - name: Configure (Ubuntu)
+      - name: Build (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
-          cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev \
-          -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-          -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON \
-          -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON \
-          -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON \
-          -DWB_CLANG_LANGUAGE_VERSION="c++20" -DWB_GCC_LANGUAGE_VERSION="c++20" \
-          -DWB_GCC_ENABLE_WARNING_WUNDEF=OFF
+          cmake --build --preset x86_64-unknown-linux-gcc-${{ matrix.build }}
 
-      - name: Configure (Windows)
+      - name: Build (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          cmake -B ${{ github.workspace }}\out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=ON -DMI_BUILD_TESTS=ON -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest" -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON
+          cmake --build --preset x86_64-intel_pc-windows-msvc-${{ matrix.build }}
 
-      - name: Build
+      - name: Test (MacOS)
+        if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          cmake --build ${{ github.workspace }}/out --config ${{ matrix.build }} --parallel
+          ctest --preset x86_64-apple-darwin-${{ matrix.build }}
 
-      - name: Test
-        working-directory: ${{ github.workspace }}/out
-        run: ctest -C ${{ matrix.build }} --output-on-failure
+      - name: Test (Ubuntu)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          ctest --preset x86_64-unknown-linux-gcc-${{ matrix.build }}
+
+      - name: Test (Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          ctest --preset x86_64-intel_pc-windows-msvc-${{ matrix.build }}
