[apps] Extract command flags parser

--- a/apps/half-life-2/CMakeLists.txt
+++ b/apps/half-life-2/CMakeLists.txt
@@ -71,6 +71,8 @@ target_sources(${WB_HALF_LIFE2_TARGET_NAME}
   PRIVATE
     ${WB_ROOT_DIR}/apps/i18n_creator.cc
     ${WB_ROOT_DIR}/apps/i18n_creator.h
+    ${WB_ROOT_DIR}/apps/parse_command_line.cc
+    ${WB_ROOT_DIR}/apps/parse_command_line.h
 )
 
 if (WB_OS_WIN)
