[base] Detect heap allocation failure

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -12,6 +12,7 @@ set(WB_BASE_TARGET_NAME "whitebox-base")
 
 set(WB_BASE_LINK_OPTIONS "")
 set(WB_BASE_LINK_DEPS
+  absl::cleanup
   fmt
   g3log
   mimalloc)
