[apps] Detect x86-64 CPUs with missed features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -526,6 +526,7 @@ add_subdirectory("whitebox-boot-manager")
 ## Hardware Abstraction Layer.
 
 add_subdirectory("hal/drivers/hid")
+add_subdirectory("hal/drivers/cpu")
 
 ## Kernel.
 
